--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ bevy = { version = "0.14", default-features = false, features = [
     "bevy_ui",
     "bevy_core_pipeline",
     "bevy_gizmos",
+    "bevy_audio",
+    "wav",
     "default_font",
     "png",
     "x11",
